# voltmem

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  demo.py  pyproject.toml  requirements-experiments.txt  requirements-integrations.txt  requirements.txt
.github/workflows/: ci.yml  publish-sidecar.yml
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/src/: client.test.ts  index.ts  types.ts
docs/: OPEN_PROBLEMS.md  RESEARCH.md  SIDECAR.md
docs/canvases/: README.md
examples/: __init__.py  contradiction_demo.py  custom_classifier.py  langchain_agent.py  multi_tenant.py  quickstart_batteries.py
examples/chat_app/: __init__.py  cli.py  display.py  llm.py  session.py
experiments/: calibrate_escalation.py  capacity_efficiency.py  ema_erosion_test.py  ewc_baseline_v1.py  ewc_volatility_v2.py  ewc_volatility_v3_mnist.py  llm_memory_bench.py  longmemeval.py  mem0_comparison.py  mem0_side_by_side.py  memory_demo.py  prior_calibration_hist.py  retrieval_haystack_bench.py  retrieval_plateau_probe.py  voltmem_eval.py
paper/: ARXIV_SUBMISSION.md  build_paper.py  findings.md
sidecar/: README.md  __init__.py  __main__.py  app.py  auth.py  memory_pool.py  profiles.py
tests/: test_classifiers.py  test_client.py  test_discovery.py  test_sidecar.py  test_vector_index.py  test_voltmem.py
voltmem/: __init__.py  classifiers.py  client.py  discovery.py  domains.py  embeddings.py  extract.py  memory.py  scoring.py  store.py  vector_index.py
voltmem/integrations/: langchain.py
