[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "voltmem"
version = "0.1.0"
description = "Current-truth memory for LLM agents — protect stable facts, update volatile ones."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "VoltMem contributors" }]
keywords = ["llm", "agent", "memory", "rag", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
langchain = ["langchain-core>=0.3.0", "langchain>=0.3.0"]
all = ["sentence-transformers>=3.0", "langchain-core>=0.3.0", "langchain>=0.3.0"]

[project.urls]
Repository = "https://github.com/voltmem/voltmem"

[tool.setuptools.packages.find]
where = ["."]
include = ["voltmem*"]
