[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "voltmem"
version = "0.2.2"
description = "Current-truth memory for LLM agents — protect stable facts, update volatile ones."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VoltMem contributors" }]
keywords = ["llm", "agent", "memory", "rag", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
langchain = ["langchain-core>=0.3.0", "langchain>=0.3.0"]
sidecar = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "httpx>=0.27"]
all = [
    "sentence-transformers>=3.0",
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Rouche01/voltmem"
Repository = "https://github.com/Rouche01/voltmem"
Issues = "https://github.com/Rouche01/voltmem/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["voltmem*", "sidecar*"]
